# FullStack_GenAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
NLP/tokenization/: name_entity_recognition.ipynb  partsofspeech_tagging.ipynb  stemming_lemmatization.ipynb  stopwords.ipynb  tokenizations.ipynb
april12/: custom_word2vec.ipynb  custom_word2vec_V2.ipynb
april12/data/: ai.txt
april18/: SOTA.ipynb
april_11/: word2vec.ipynb
